Merge origin/master
Conflicts:
	tallerPOO/pom.xml
	tallerPOO/src/main/java/com/mycompany/tallerpoo/AdmisionDeEmergencia.java
	tallerPOO/src/main/java/com/mycompany/tallerpoo/AsignacionBox.java
	tallerPOO/src/main/java/com/mycompany/tallerpoo/Box.java
	tallerPOO/src/main/java/com/mycompany/tallerpoo/FuncionarioAdministrativo.java
	tallerPOO/src/main/java/com/mycompany/tallerpoo/Medico.java
	tallerPOO/src/main/java/com/mycompany/tallerpoo/Paciente.java
	tallerPOO/src/main/java/com/mycompany/tallerpoo/Persona.java
	tallerPOO/src/main/java/com/mycompany/tallerpoo/ResultadoEstudios.java
	tallerPOO/src/main/java/com/mycompany/tallerpoo/TallerPOO.java
	tallerPOO/src/main/java/com/mycompany/tallerpoo/Triage.java