@@ -97,7 +97,7 @@ public class ListaEnfermeros {
             BufferedReader reader= new BufferedReader (new FileReader(archivoNombre));
             String linea = reader.readLine();
             
-            while (linea!=null && !linea.isBlank()){
+            while (linea!=null && !linea.trim().isEmpty()){
                 String[] split=linea.split(",");//splitea la linea
                 String[] splitFecha=split[2].split("/");//splitea la fecha 
                 
